# trivia

./: .env.example  README.md  app.py  extensions.py  package-lock.json  pyproject.toml
api/: views.py
api/resources/: routes.py  user.py
back/: Libro1.xlsx  README.md  app.py  config.py  extensions.py  pyproject.toml
back/api/: views.py
back/api/resources/: functions.py  routes.py
back/instance/: db.trivia
back/models/: tables.py
front/trivia/: package-lock.json  package.json  vite.config.js
front/trivia/src/: App.jsx  main.jsx
front/trivia/src/pages/: home.jsx
front/trivia/src/store/: flux.jsx
instance/: db.trivia
migrations/versions/: 95e1a507f468_.py
models/: question.py
trivia-front/: .env.example  package-lock.json  package.json
trivia-front/back/: Libro1.xlsx  app.py  config.py  extensions.py  pyproject.toml
trivia-front/back/api/: admin_routes.py  views.py
trivia-front/back/api/resources/: functions.py  routes.py
trivia-front/back/instance/: db.trivia
trivia-front/back/migrations/versions/: 166bd40f7dbc_.py  c577d4d0827e_.py  c8a769968c71_.py
trivia-front/back/models/: tables.py  users.py
trivia-front/back/templates/: file_loader.html  loged.html  loges2.html  login.html  login2.html  signup.html
trivia-front/src/: App.css  App.jsx  index.css  style.scss
trivia-front/src/pages/: home.jsx  trivia.jsx
trivia-front/src/store/: appContext.jsx  flux.jsx
trivia-front/src/syles/: trivia.css
